@@ -1,5 +1,6 @@
 apport (0.98) UNRELEASED; urgency=low
 
+  [ Martin Pitt ]
   * debian/local/setup-apport-retracer: launchpadBugs -> launchpadbugs
     (recently renamed Python package in python-launchpad-bugs).
   * apport/crashdb_impl/launchpad.py, test examples: Do not duplicate to bug
@@ -9,6 +10,9 @@ apport (0.98) UNRELEASED; urgency=low
   * apport/crashdb_impl/launchpad.py, close_duplicate(): Explicitly set the
     duplicate after removing attachments, since the new LP does not allow any
     modification of duplicate bugs.
+
+  [ Colin Watson ]
+  * Use bugs.launchpad.net for +filebug and +bugs requests. (LP: #138090)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 10 Sep 2007 16:32:56 +0200
 
